--- a/docker-registry/Vagrantfile
+++ b/docker-registry/Vagrantfile
@@ -10,5 +10,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box_url = "http://cloud-images.ubuntu.com/vagrant/saucy/current/saucy-server-cloudimg-amd64-vagrant-disk1.box"
 
   config.vm.provision :shell, :path => "bootstrap-registry.sh"
+
+  config.vm.network :public_network, :bridge => "en0: Wi-Fi (AirPort)"
   
 end
